plantilla sin handlebars

--- a/clase-9/public/index.html
+++ b/clase-9/public/index.html
@@ -1,3 +1,7 @@
+
+
+<!-- EL SERVIDOR VA A SERVIR LO QUE SE ENCUENTRE EN LA CARPETA PUBLIC COMO ESTE index.HTML-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,6 +32,7 @@
         `
         //DEFINO MI TEMPLATE CON HANDLEBAR
         const template = Handlebars.compile(templateString) //aplico el template que cree
+
         //creo los datos
         const datos = {
             nombre: "IVAN"
