creando la plantilla handlerbars

--- a/clase-9/public/index.html
+++ b/clase-9/public/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 
+    <!-- crear una plantilla desde el lado del cliente -->
+
+    
     <span></span>  <!-- ACA SE VA A INSERTAR EL TEMPLATE --> 
 
 
